# AgentArena

./: .gitignore  MULTI_AGENT_GUIDE.md  Makefile  README.md  UV_GUIDE.md
backend/: README.md  main.py  pyproject.toml  requirements.txt  start.py
backend/agents/: __init__.py  base.py  manager.py
backend/agents/langchain_agent/: __init__.py  agent.py
backend/agents/simple_chat/: __init__.py  agent.py
backend/api/: main.py
backend/core/: config.py  logging.py
backend/models/: __init__.py  agent.py  chat.py
backend/utils/: __init__.py  helpers.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/services/: chatService.js
