[project]
name = "backend"
version = "0.1.0"
description = "AgentArena ChatGPT Backend API - FastAPI + LangChain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "langchain==0.2.16",
    "langchain-openai==0.1.23",
    "pydantic>=2.7.4,<3.0.0",
    "python-dotenv==1.0.0",
    "uvicorn[standard]==0.24.0",
]
authors = [
    { name = "AgentArena", email = "admin@agentarena.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["fastapi", "langchain", "chatgpt", "openai", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/agentarena/chatgpt-app"
Repository = "https://github.com/agentarena/chatgpt-app.git"
Issues = "https://github.com/agentarena/chatgpt-app/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
